--- a/arch/arm64/configs/m51_defconfig
+++ b/arch/arm64/configs/m51_defconfig
@@ -817,7 +817,7 @@ CONFIG_XFRM_STATISTICS=y
 CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
-CONFIG_KNOX_NCM=y
+# CONFIG_KNOX_NCM is not set
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
@@ -1714,7 +1714,7 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_DELAY is not set
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
-CONFIG_DM_VERITY=y
+# CONFIG_DM_VERITY is not set
 CONFIG_DM_VERITY_FEC=y
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
@@ -6294,9 +6294,9 @@ CONFIG_SECURITY_SMACK=y
 # CONFIG_MFC_CHARGER is not set
 # CONFIG_MST_LPM_DISABLE is not set
 # CONFIG_MST_LPM_CONTROL is not set
-CONFIG_INTEGRITY=y
+# CONFIG_INTEGRITY Is noT set
 # CONFIG_INTEGRITY_SIGNATURE is not set
-CONFIG_INTEGRITY_AUDIT=y
+# CONFIG_INTEGRITY_AUDIT is not set 
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 # CONFIG_FIVE is not set
