Revert "Minimal Update"
This reverts commit 0184c641b06181e47dc30b7e497d1927f0f6b0e0.

Avoid Boot Loop

--- a/arch/arm64/configs/m51_defconfig
+++ b/arch/arm64/configs/m51_defconfig
@@ -614,8 +614,7 @@ CONFIG_DIRECT_RECLAIM_FILE_PAGES_ONLY=y
 CONFIG_MMAP_READAROUND_LIMIT=0
 # CONFIG_FAULT_AROUND_4KB is not set
 CONFIG_RBIN=y
-CONFIG_PAGE_BOOST=y
-CONFIG_PAGE_BOOST_RECORDING=y
+# CONFIG_PAGE_BOOST is not set
 CONFIG_LARGE_DIRTY_BUFFER=y
 CONFIG_MAX_DIRTY_THRESH_PAGES=25600
 
@@ -1264,8 +1263,6 @@ CONFIG_QRTR_SMD=y
 # CONFIG_NET_NCSI is not set
 # CONFIG_RMNET_DATA is not set
 # CONFIG_RMNET_USB is not set
-CONFIG_USB_CONFIGFS_F_SS_MON_GADGET=y
-CONFIG_USB_F_SS_MON_GADGET=y
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
@@ -5589,9 +5586,6 @@ CONFIG_VBUS_NOTIFIER=y
 # CONFIG_SEC_QUEST_UEFI_ACT_TRIGGER is not set
 # CONFIG_SEC_QUEST_UEFI_USER is not set
 # CONFIG_SEC_QUEST_DDR_SCAN_USER is not set
-CONFIG_SEC_QUEST=y
-CONFIG_SEC_QUEST_UEFI=y
-# CONFIG_SEC_QUEST_UEFI_ENHANCEMENT is not set
 
 #
 # Battery drivers
@@ -5866,9 +5860,7 @@ CONFIG_SDFAT_DBG_MSG=y
 # CONFIG_SDFAT_DBG_BUGON is not set
 CONFIG_SDFAT_STATISTICS=y
 CONFIG_SDFAT_UEVENT=y
-CONFIG_NTFS_FS=y
-CONFIG_NTFS_DEBUG=y
-# CONFIG_NTFS_RW is not set
+# CONFIG_NTFS_FS is not set
 
 #
 # Pseudo filesystems
