--- a/arch/arm64/configs/m51_defconfig
+++ b/arch/arm64/configs/m51_defconfig
@@ -50,7 +50,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Proton"
+CONFIG_LOCALVERSION="-Test"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
