--- a/arch/arm64/configs/m51_defconfig
+++ b/arch/arm64/configs/m51_defconfig
@@ -683,7 +683,7 @@ CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES=""
 CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP=y
 # CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL is not set
 CONFIG_KRYO_PMU_WORKAROUND=y
-# CONFIG_BUILD_ARM64_DT_OVERLAY is not set
+CONFIG_BUILD_ARM64_DT_OVERLAY=y
 
 #
 # Userspace binary formats
@@ -804,7 +804,7 @@ CONFIG_XFRM_STATISTICS=y
 CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
-CONFIG_KNOX_NCM=y
+# CONFIG_KNOX_NCM is not set
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
@@ -1497,7 +1497,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_QCOM_COINCELL is not set
 # CONFIG_APDS9802ALS is not set
 # CONFIG_ISL29003 is not set
-CONFIG_KNOX_KAP=y
+# CONFIG_KNOX_KAP is not set
 # CONFIG_ISL29020 is not set
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_BH1770 is not set
